--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
-.pio
+# PlatformIO
+.pio/
+.pioenvs/
+.piolibdeps/
+
+# VSCode - archivos temporales y personales
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+.vscode/settings.json
+
+# Secrets y configuración personal
 src/secrets.h
+
+# Sistema
+.DS_Store
+Thumbs.db
+*.tmp
+*.bak
+*.swp
+*~
+
+# Logs
+*.log
